@@ -15,6 +15,7 @@
  +   - use drill strike, piano strike, air mine
  +   - use mine strike (0 seconds only)
  +   - use RC plane (very basic)
+ + Low level computer players are more inaccurate with guns
  * Racer: Resize waypoints in custom-sized drawn maps
  * Mutant: Fix impossible to become mutant after mutant is gone
  * A Classic Fairytale: Mission 1: Fix possibility of getting stuck in “Leap of Faith” section
